refactor sidebar css and add its scroll

--- a/src/draft/sidebar/index.html
+++ b/src/draft/sidebar/index.html
@@ -6,6 +6,7 @@
 	<title>Sidebar</title>
 
 	<link rel="stylesheet" href="./sidebar.css">
+	<link rel="stylesheet" href="./scroll.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
