give z index and shadow spread to cover the upper part

--- a/src/draft/loader/loader.html
+++ b/src/draft/loader/loader.html
@@ -11,8 +11,8 @@ some content <br />
 content <br />
 
 <style loaderStyle>
-	html, 
-	body, 
+/*	html, */
+/*	body, */
 	.loader {
 		background: #1d1d1d;
 		color: #eee;
@@ -43,6 +43,8 @@ content <br />
 		user-select: none;
 		cursor: default;
 		cursor: none;
+		box-shadow: 0 0 0 15vh #1d1d1d;
+		z-index: 999999999999999999999;
 		/* cursor: grab;*/
 	}
 	/* .loader:active{ cursor: default; }*/
