px to em; also add super

--- a/src/draft/coolText/index.html
+++ b/src/draft/coolText/index.html
@@ -9,6 +9,16 @@
 
 </head>
 <body>
-	<script type="module" src="./coolText.js"></script>
+	<!-- <script type="module" src="./coolText.js"></script> -->
+	<script type="module" src="./coolTextTest.js"></script>
+
+	<style>
+		body{
+			background-color: #1a1a1a;
+			color: #ededed;
+		}
+
+
+	</style>
 </body>
 </html>
