nice way to add notifications but they got no identifier

--- a/src/draft/notifications/index.html
+++ b/src/draft/notifications/index.html
@@ -6,13 +6,14 @@
 	<title>Notifications</title>
 
 	<link rel="stylesheet" href="./notification.css">
+	<link rel="stylesheet" href="./notifications.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Jost&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-	<script src="./notification.js" type="module"></script>
-	<v-notification></v-notification>
+	<script src="./v-notifications.js" type="module"></script>
+	<v-notifications></v-notifications>
 </body>
 </html>
