--- a/src/draft/notifications/index.html
+++ b/src/draft/notifications/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
 	<script src="./v-notifications.js" type="module"></script>
-	<v-notifications></v-notifications>
+	<div class = "v-notifications"></div>
 </body>
 </html>
