better v-buttons with transition

--- a/src/draft/v-button/index.html
+++ b/src/draft/v-button/index.html
@@ -12,6 +12,11 @@
 <body>
 
 	<script src="./v-button.js" type="module"></script>
-<v-button text="Profile"></v-button><v-button text="Django"></v-button><v-button text="Python"></v-button><v-button text="JavaScript"></v-button><v-button text="GitHub"></v-button><v-button text="F"></v-button>
+	<v-button text="Profile"></v-button>
+	<v-button text="Django"></v-button>
+	<v-button class="inverter" text="Python"></v-button>
+	<v-button text="JavaScript"></v-button>
+	<v-button text="GitHub"></v-button>
+	<v-button text="F"></v-button>
 </body>
 </html>
