make chips switchable

--- a/src/draft/v-button/index.html
+++ b/src/draft/v-button/index.html
@@ -21,11 +21,13 @@
 		style="--active: hsl(120deg, 100%, 70%)">
 	</v-button>
 	<v-button 
+		active
 		text="Python" 
 		class="glass"
 		style="--active: hsl(207deg, 100%, 70%)">
 	</v-button>
 	<v-button 
+		active
 		text="JavaScript" 
 		class="glass"
 		style="--active: hsl(60deg, 100%, 70%); --passive: #222;">
