styled routing elements

--- a/src/draft/v-router/index.html
+++ b/src/draft/v-router/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Switching</title>
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<!-- <v-component></v-component> -->
 	<div id="content">just a sec</div>
 	<a text="fasad texti" href="#v-compact" onclick="route()">go</a>
 	<a text="fasad texti" href="#projects" onclick="route()">go</a>
+	<a text="fasad texti" href="#" onclick="route()">nu</a>
 
 	<script src="./index.js" type="module"></script>
 </body>
