sidebar works with router

--- a/draft/sidebar/index.html
+++ b/draft/sidebar/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sidebar</title>
 
+	<!-- <link rel="stylesheet" href="/src/style/reset.css"> -->
 	<link rel="stylesheet" href="./sidebar.css">
 	<link rel="stylesheet" href="./scroll.css">
 
@@ -128,6 +129,7 @@ content <br />
 </style>
 
 	<v-sidebar></v-sidebar>
+	<div id="content" style="margin-left: 80px;">contentus</div>
 		<script src="./sidebar.js" type="module"></script>
 		<!-- <div class="footer"> -->
 			<!-- = -->
