change loading script from sidebar.js to index.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sidebar</title>
+	<title>VΛ9IFF</title>
 
 	<!-- <link rel="stylesheet" href="/src/style/reset.css"> -->
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
@@ -128,7 +128,7 @@
 </style>
 	<v-sidebar></v-sidebar>
 	<div id="content"></div>
-		<script src="./src/sidebar/sidebar.js" type="module"></script>
+		<script src="./src/index.js" type="module"></script>
 	</div>
 </body>
 </html>
