start to make network view and view styles

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>VΛ9IFF</title>
 
-	<!-- <link rel="stylesheet" href="/src/style/reset.css"> -->
+	<link rel="stylesheet" href="/src/style/reset.css">
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
 	<link rel="stylesheet" href="./src/sidebar/scroll.css">
 	<link rel="stylesheet" href="./src/sidebar/content.css">
+	<link rel="stylesheet" href="./src/views/utility.css">
+	<link rel="stylesheet" href="./src/views/network/network.css">
+	<link rel="stylesheet" href="./src/views/network/transitions.css">
+
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Jost&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Josefin+Sans&family=Jost&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body><div class="loader">
 	<div class="caption">
