move network table css to a different file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./src/sidebar/content.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
 	<link rel="stylesheet" href="./src/views/network/network.css">
+	<link rel="stylesheet" href="./src/views/network/network-table.css">
 	<link rel="stylesheet" href="./src/views/network/transitions.css">
 
 
