add notification container paddings

--- a/draft/notifications/index.html
+++ b/draft/notifications/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Notifications</title>
 
+	<link rel="stylesheet" href="../../../src/style/reset.css">
 	<link rel="stylesheet" href="./notification.css">
 	<link rel="stylesheet" href="./notifications.css">
 
