--- a/draft/notifications/index.html
+++ b/draft/notifications/index.html
@@ -11,7 +11,8 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Jost&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Josefin+Sans&family=Jost&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 	<script src="./v-notifications.js" type="module"></script>
