gradient breath loader (with no minimal waiting. gotta add it)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="./src/views/network/network.css">
 	<link rel="stylesheet" href="./src/views/network/network-table.css">
 	<link rel="stylesheet" href="./src/views/network/transitions.css">
+	<link rel="stylesheet" href="./src/views/switching.css">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -132,7 +133,9 @@
 	}
 </style>
 	<v-sidebar></v-sidebar>
-	<div id="content"></div>
+	<div id="content">
+	</div>
+	<div id="switcherElement">this is switch element</div>
 		<script src="./src/index.js" type="module"></script>
 	</div>
 </body>
