make dashboard me image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="./src/views/network/network-table.css">
 	<link rel="stylesheet" href="./src/views/network/transitions.css">
 	<link rel="stylesheet" href="./src/views/switching.css">
+	<link rel="stylesheet" href="./src/views/dashboard/heading.css">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
