--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>VΛ9IFF</title>
 
-	<link rel="stylesheet" href="/src/style/reset.css">
+	<link rel="stylesheet" href="./src/style/reset.css">
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
 	<link rel="stylesheet" href="./src/sidebar/scroll.css">
 	<link rel="stylesheet" href="./src/sidebar/content.css">
