--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="./src/views/network/transitions.css">
 	<link rel="stylesheet" href="./src/views/switching.css">
 	<link rel="stylesheet" href="./src/views/dashboard/heading.css">
+	<link rel="stylesheet" href="./src/views/dashboard/name.css">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
