add sticky and scrolls

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>VΛ9IFF</title>
 
 	<link rel="stylesheet" href="./src/style/reset.css">
+	<link rel="stylesheet" href="./src/components/shady-scroller/shady-scroller.css">
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
 	<link rel="stylesheet" href="./src/sidebar/scroll.css">
 	<link rel="stylesheet" href="./src/sidebar/content.css">
@@ -16,6 +17,8 @@
 	<link rel="stylesheet" href="./src/views/switching.css">
 	<link rel="stylesheet" href="./src/views/dashboard/heading.css">
 	<link rel="stylesheet" href="./src/views/dashboard/name.css">
+	<link rel="stylesheet" href="./src/views/dashboard/mytree.css">
+	<link rel="stylesheet" href="./src/views/dashboard/about.css">
 	<link rel="stylesheet" href="./src/views/dashboard/transitions.css">
 
 
