add coolText but hasn't used yet; give padding for tree content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="./src/views/dashboard/mytree.css">
 	<link rel="stylesheet" href="./src/views/dashboard/about.css">
 	<link rel="stylesheet" href="./src/views/dashboard/transitions.css">
+	<link rel="stylesheet" href="./src/coolText/coolText.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
 
 
