--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>VΛ9IFF</title>
 
 	<link rel="stylesheet" href="./src/style/reset.css">
+	<link rel="stylesheet" href="./src/style/selection.css">
 	<link rel="stylesheet" href="./src/components/shady-scroller/shady-scroller.css">
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
 	<link rel="stylesheet" href="./src/sidebar/scroll.css">
