add custom scrollbars for views

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" href="./src/style/reset.css">
 	<link rel="stylesheet" href="./src/style/selection.css">
+	<link rel="stylesheet" href="./src/style/scrollbars.css">
 	<link rel="stylesheet" href="./src/components/shady-scroller/shady-scroller.css">
 	<link rel="stylesheet" href="./src/sidebar/sidebar.css">
 	<link rel="stylesheet" href="./src/sidebar/scroll.css">
