add impact; manual hash change without a tag clicking

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 	<link rel="stylesheet" href="./src/coolText/coolText.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
 
+	<link rel="stylesheet" href="./src/features/impact.css">
+	<script src="./src/features/impact.js" async></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -143,6 +145,7 @@
 		transform: scale(1.4);
 	}
 </style>
+	<div id="impactHolder"></div>
 	<v-sidebar></v-sidebar>
 	<div id="content">
 	</div>
