add projects view structure

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	<link rel="stylesheet" href="./src/views/projects/projects.css">
 	<link rel="stylesheet" href="./src/coolText/coolText.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
+	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
 
 	<link rel="stylesheet" href="./src/features/impact.css">
 
