--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
 
 	<link rel="stylesheet" href="./src/features/impact.css">
+	<!-- <link rel="stylesheet" href="./src/features/home-view-bg/home-view-bg.css"> -->
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -148,11 +149,14 @@
 	<v-sidebar></v-sidebar>
 	<div id="content">
 	</div>
-	<div id="switcherElement">this is switch element</div>
+	<div id="switcherElement">
+		<!-- <canvas></canvas> -->
+	</div>
 	</div>
 	<script src="./src/index.js" type="module"></script>
 	<script src="./src/features/impact.js" async></script>
+	<!-- <script src="./src/features/home-view-bg/home-view-bg.js" async></script> -->
 	<div id="impactHolder"></div>
-	
+
 </body>
 </html>
