--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="./src/views/dashboard/about.css">
 	<link rel="stylesheet" href="./src/views/dashboard/transitions.css">
 	<link rel="stylesheet" href="./src/views/projects/projects.css">
+	<link rel="stylesheet" href="./src/views/cv/cv.css">
 	<link rel="stylesheet" href="./src/coolText/coolText.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
 	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
