add mobile styles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 	<link rel="stylesheet" href="./src/coolText/coolText.css">
 	<link rel="stylesheet" href="./src/views/utility.css">
 	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
+	<link rel="stylesheet" href="./src/sidebar/mobile.css">
+
 
 	<link rel="stylesheet" href="./src/features/impact.css">
 	<!-- <link rel="stylesheet" href="./src/features/home-view-bg/home-view-bg.css"> -->
