scrolled img.me is positioned from property; add mobile style for dashboard

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="./src/views/utility.css">
 	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
 	<link rel="stylesheet" href="./src/sidebar/mobile.css">
+	<link rel="stylesheet" href="./src/views/dashboard/mobile.css">
 
 
 	<link rel="stylesheet" href="./src/features/impact.css">
