--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" href="./src/components/v-button/v-button.css">
 	<link rel="stylesheet" href="./src/sidebar/mobile.css">
 	<link rel="stylesheet" href="./src/views/dashboard/mobile.css">
+	<link rel="stylesheet" href="./src/views/network/mobile.css">
 
 
 	<link rel="stylesheet" href="./src/features/impact.css">
