add good mobile style for project

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<link rel="stylesheet" href="./src/sidebar/mobile.css">
 	<link rel="stylesheet" href="./src/views/dashboard/mobile.css">
 	<link rel="stylesheet" href="./src/views/network/mobile.css">
+	<link rel="stylesheet" href="./src/views/projects/mobile.css">
 
 
 	<link rel="stylesheet" href="./src/features/impact.css">
